add team list and team description

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -23,7 +23,7 @@
             </div>
                 <br>
 
-                <button class="btn btn-default" type="submit" style="margin-top : 20px ; width : 130px ; background : #3498DB ;
+                    <button class="btn btn-primary" type="submit" style="margin-top : 20px ; width : 130px ; background : #3498DB ;
                 color : white ;
                 ">Login</button>
             }
