--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -28,7 +28,7 @@
             </div>
     </div>
 </div>
-<a href="@routes.Application.groupList()">
+<a href="@routes.Application.teamList()">
 <div class="one-button" style="background:#F1C40F;height:150px;">
     <div style="padding: 20px; text-align: center;">
     <img type="image/png" src="@routes.Assets.at("images/group.png")" style="height: 90px;margin-bottom: 10px;">
