--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -1,4 +1,4 @@
-@(groups: List[GroupList])
+@(teams: List[Team])
 
 @main("Group List")(css) {
     <div class="uk-grid uk-grid-small uk-text-center" data-uk-grid-margin>
@@ -14,14 +14,19 @@
         </div>
     </div>
 
-    @groups.map { group =>
+
+    @teams.map { team =>
+
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
+                <a href="@routes.Application.team(team.id)">
                 <div class="uk-panel uk-panel-box uk-panel-box-primary">
-                    @group.name <br>
+                    @team.name
                 </div>
+                </a>
             </div>
         </div>
+
     }
 
 }
