--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -1,65 +1,79 @@
 @(message: String)
 
-    @main("Main menu")(css) {
-        <div class="name-user">
-        @message
+@main("Main menu")(css) {
+    <div class="uk-grid uk-grid-collapse">
+        <div class="uk-width-1-1">
+            <div class="uk-panel uk-panel-box">@message</div>
         </div>
-
-        
-
-        <div class="countdown-time">
-            <div id="clock"></div>
-            <script>
-            $ ( '#clock' ).countdown ( "2015/03/10 00:00:00", function ( event ) {
-            var totalHours = event.offset.totalDays * 24 + event.offset.hours ;
-            $ ( this ).html ( event.strftime ( totalHours + ' hr %M min %S sec' ) ) ;
-            } ) ;
-            </script>
-        </div>
-        <div class="box">
-            <div class="two-button-left" style="background : #2ECC71 ; height : 150 px ;">
-                <div style="padding : 20 px ; text-align : center ; height : 150 px ;">
-                    <img type="image/png" src="@routes.Assets.at("images/QR.png")" style="height : 90 px ; margin-bottom : 10 px ;">
-                    <p>QR</p>
-                </div>
-            </div>
-            <div class="two-button-right" style="background : #3498DB ; height : 150 px ;">
-                <div style="padding : 20 px ; text-align : center ;">
-                    <img type="image/png" src="@routes.Assets.at("images/PIN.png")" style="height : 90 px ; margin-bottom : 10 px ;">
-                    <p>PIN</p>
-                </div>
+    </div>
+    <div class="uk-grid uk-grid-collapse">
+        <div class="uk-width-1-1">
+            <div class="uk-panel uk-panel-box">
+                <div id="clock"></div>
+                <script>
+                $ ( '#clock' ).countdown ( "2015/03/10 00:00:00", function ( event ) {
+                var totalHours = event.offset.totalDays * 24 + event.offset.hours ;
+                $ ( this ).html ( event.strftime ( totalHours + ' hr %M min %S sec' ) ) ;
+                } ) ;
+                </script>
             </div>
         </div>
-        <a href="@routes.Application.teamList()">
-            <div class="one-button" style="background : #F1C40F ; height : 150 px ;">
-                <div style="padding : 20 px ; text-align : center ;">
-                    <img type="image/png" src="@routes.Assets.at("images/group.png")" style="height : 90 px ; margin-bottom : 10 px ;">
-                    <p>Group list</p>
-                </div>
-            </div>
-        </a>
-
-
-        <div class="box" style="margin-bottom : 20 px">
-            <div class="two-button-left" style="background : #832d51 ; height : 150 px ; width : 56.5 % ;">
-                <div style="padding : 20 px ; text-align : center ;">
-                    <img type="image/png" src="@routes.Assets.at("images/achievement.png")" style="height : 90 px ; margin-bottom : 10 px ;">
-                    <p>Achievement</p>
-                </div>
-            </div>
-
-            <a href="@routes.Application.logout()">
-                <div class="two-button-right" style="background : #C0392B ; height : 150 px ; width : 40.5 % ;">
-                    <div style="padding : 20 px ; text-align : center ;">
-                        <img type="image/png" src="@routes.Assets.at("images/logout.png")" style="height : 90 px ; margin-bottom : 10 px ;">
-                        <p>Log out</p>
+    </div>
+    <div class="uk-text-center">
+        <div class="uk-grid uk-grid-margin uk-grid-small">
+            <div class="uk-width-1-2">
+                <div class="uk-panel uk-panel-box">
+                <a href="" class="uk-icon-hover uk-icon-qrcode uk-margin-small-bottom" style="font-size: 500%"></a>
+                <br>
+                <div class="uk-text-bottom">QR</div>
                     </div>
-                </div>
-            </a>
-        </div>
-    }
+            </div>
 
-    @css = {
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main_menu_style.css")">
-        <script src="@routes.Assets.at("javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
-    }
+
+            <div class="uk-width-1-2">
+                <div class="uk-panel uk-panel-box">
+                <a href="" class="uk-icon-hover uk-icon-key uk-margin-small-bottom" style="font-size: 500%"></a>
+                <br>
+                <div class="uk-text-bottom">PIN</div>
+                    </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="uk-text-center">
+        <div class="uk-grid uk-margin-small-top">
+            <div class="uk-width-1-1">
+                <div class="uk-panel uk-panel-box">
+                    <a href="" class="uk-icon-hover uk-icon-group uk-margin-small-bottom" style="font-size: 500%"></a>
+                    <br>
+                    <div class="uk-text-bottom">Group list</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="uk-text-center">
+        <div class="uk-grid uk-grid-small uk-margin-small-top">
+            <div class="uk-width-6-10">
+                <div class="uk-panel uk-panel-box">
+                <a href="" class="uk-icon-hover uk-icon-archive uk-margin-small-bottom" style="font-size: 500%"></a>
+                <br>
+                <div class="uk-text-bottom">Achievement</div>
+                    </div>
+            </div>
+            <div class="uk-width-4-10">
+                <div class="uk-panel uk-panel-box">
+                <a href="" class="uk-icon-hover uk-icon-power-off uk-margin-small-bottom" style="font-size: 500%"></a>
+                <br>
+                <div class="uk-text-bottom">Logout</div>
+                    </div>
+            </div>
+
+        </div>
+    </div>
+}
+
+@css = {
+    <script src="@routes.Assets.at("javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
+}
