--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -1,14 +1,14 @@
 @(teams: List[Team])
 
 @main("Group List")(css) {
-    <div class="uk-grid uk-grid-small uk-text-center" data-uk-grid-margin>
+    <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin>
         <div class="uk-width-1-6">
-            <div class="uk-panel uk-panel-box uk-panel-box-primary">
+            <div class="uk-panel uk-panel-box ui-red">
                 <a href="@routes.Application.mainMenu()" class="uk-icon-hover uk-icon-small uk-icon-arrow-left"></a>
             </div>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box uk-panel-box-primary">
+            <div class="uk-panel uk-panel-box ui-yellow">
                 Group List
             </div>
         </div>
@@ -20,7 +20,7 @@
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
                 <a href="@routes.Application.team(team.id)">
-                <div class="uk-panel uk-panel-box uk-panel-box-primary">
+                <div class="uk-panel uk-panel-box ui-green">
                     @team.name
                 </div>
                 </a>
