add create team page, add button to create team page in login,  add cancel button in edit_description page and register page

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -18,11 +18,11 @@
 
                     <div class="form-group">
                         Email
-                        <input class="form-control" type="email" name="email"">
+                        <input class="form-control" type="email" name="email">
                     </div>
                     <div class="form-group">
                         Password
-                        <input class="form-control" type="password" name="password"">
+                        <input class="form-control uk-margin-small-bottom" type="password" name="password">
                     </div>
                 </div>
             </div>
@@ -33,7 +33,13 @@
     </div>
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.regis()">Register</a>
+            <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.regis">Register</a>
+        </div>
+    </div>
+
+    <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-width-9-10 uk-container-center">
+            <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.createTeam">Create a team</a>
         </div>
     </div>
 }
