--- a/app/views/create_team.scala.html
+++ b/app/views/create_team.scala.html
@@ -1,26 +1,27 @@
-@(form: Form[forms.EditDescription])(name: String)
-@main("Edit team description")(css) {
-    @helper.form(routes.Application.editDescription) {
+@(form: Form[forms.CreateTeam])
 
-        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+@main("Create a team")(css) {
+    @*<h1>Register</h1>*@
+    @helper.form(routes.Application.createTeam) {
+
+        <div class="uk-grid uk-grid-small uk-margin-large-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
 
                 <div class="uk-panel uk-panel-box">
                     <div class="uk-form">
 
                         <fieldset data-uk-margin>
-                            <legend>Edit @name description</legend>
+                            <legend>Create a team</legend>
                             @if(form.hasGlobalErrors) {
                                 <div class="uk-alert uk-alert-danger">
                                 @form.globalError.message
                                 </div>
                             }
 
-                            @*<input name="content" type="text" placeholder="write here" class="uk-width-1-1" value="@form.data.get("content")">*@
-                            <div class="uk-form-row">
-                                <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here"></textarea>
+                            <input name="name" type="text" placeholder="Name" class="uk-width-1-1 uk-margin-bottom" value="@form.data.get("name")">
 
-                            </div>
+                            @*<button class="uk-button uk-width-1-1">Submit</button>*@
+                            @*<label><input type="checkbox"> ...</label>*@
                         </fieldset>
 
                     </div>
@@ -30,17 +31,20 @@
         </div>
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom" type="submit">Submit</button>
+                <button class="uk-button uk-button-large uk-button-primary uk-width-1-1 uk-margin-small-bottom" type="submit">Submit</button>
             </div>
         </div>
 
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.mainMenu">Cancel</a>
+                <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.login">Cancel</a>
             </div>
         </div>
     }
+
+
 }
+
 @css = {
 
 }
