--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -51,7 +51,13 @@
         </div>
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom" type="submit">Submit</button>
+                <button class="uk-button uk-button-primary uk-button-large uk-width-1-1" type="submit">Submit</button>
+            </div>
+        </div>
+
+        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+            <div class="uk-width-9-10 uk-container-center">
+                <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.login">Cancel</a>
             </div>
         </div>
     }
