--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -3,8 +3,8 @@
 @main("Group List")(css) {
     <div class="uk-grid uk-grid-small uk-text-center" data-uk-grid-margin>
         <div class="uk-width-1-6">
-            <div class="uk-panel uk-panel-box uk-panel-box-primary">
-                <a href="@routes.Application.teamList()" class="uk-icon-hover uk-icon-small uk-icon-arrow-left"></a>
+            <div class="uk-panel uk-panel-box ui-red">
+                <a href="@routes.Application.teamList()" class="uk-icon-hover uk-icon-small uk-icon-arrow-left" ></a>
             </div>
         </div>
         <div class="uk-width-5-6">
@@ -18,10 +18,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading" style="background-color:cyan">
                     <h3 class="panel-title">Description</h3>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="background-color:lightcyan">
                 @group.description
                 </div>
             </div>
@@ -30,11 +30,11 @@
 
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <div class="panel panel-default">
-                <div class="panel-heading">
+            <div class="panel panel-default" >
+                <div class="panel-heading"  style="background-color:palevioletred">
                     <h3 class="panel-title">Member</h3>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body"  style="background-color:lightpink">
                     <ul>
                     @members.map { member =>
                         <li>@member.name @member.lastname</li>
