--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/uikit.almost-flat.min.css")">
         <script src="@routes.Assets.at("uikit-2.17.0/js/uikit.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
         @css
     </head>
     <body>
