--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -1,14 +1,14 @@
 @(group: Team)(members: List[Account])
 
 @main("Group List")(css) {
-    <div class="uk-grid uk-grid-small uk-text-center" data-uk-grid-margin>
+    <div class="uk-grid uk-text-center uk-grid-collapse">
         <div class="uk-width-1-6">
             <div class="uk-panel uk-panel-box ui-red">
                 <a href="@routes.Application.teamList()" class="uk-icon-hover uk-icon-small uk-icon-arrow-left" ></a>
             </div>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box uk-panel-box-primary">
+            <div class="uk-panel uk-panel-box ui-yellow">
             @group.name
             </div>
         </div>
@@ -46,7 +46,7 @@
     </div>
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
-            <button type="button" class="btn btn-primary btn-lg">Vote</button>
+            <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.voting">Vote</a>
         </div>
     </div>
 
