--- a/app/views/team.scala.html
+++ b/app/views/team.scala.html
@@ -18,10 +18,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default">
-                <div class="panel-heading" style="background-color:cyan">
+                <div class="panel-heading" style="background-color:#FF6262">
                     <h3 class="panel-title">Description</h3>
                 </div>
-                <div class="panel-body" style="background-color:lightcyan">
+                <div class="panel-body" style="background-color:#ff8484">
                 @group.description
                 </div>
             </div>
@@ -31,10 +31,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default" >
-                <div class="panel-heading"  style="background-color:palevioletred">
+                <div class="panel-heading"  style="background-color:#B894FF">
                     <h3 class="panel-title">Member</h3>
                 </div>
-                <div class="panel-body"  style="background-color:lightpink">
+                <div class="panel-body"  style="background-color:#D6C2FF">
                     <ul>
                     @members.map { member =>
                         <li>@member.name @member.lastname</li>
