--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -9,7 +9,7 @@
         </div>
         <div class="uk-width-5-6">
             <div class="uk-panel uk-panel-box ui-yellow">
-                Group List
+                Team List
             </div>
         </div>
     </div>
