--- a/app/views/Vote.scala.html
+++ b/app/views/Vote.scala.html
@@ -1,6 +1,6 @@
 
 
-@main("Group List")(css) {
+@main("Voting")(css) {
     <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin>
         <div class="uk-width-1-6">
             <div class="uk-panel uk-panel-box ui-red">
@@ -9,7 +9,7 @@
         </div>
         <div class="uk-width-5-6">
             <div class="uk-panel uk-panel-box ui-yellow">
-                Group List
+               Voting
             </div>
         </div>
     </div>
