--- a/app/views/Vote.scala.html
+++ b/app/views/Vote.scala.html
@@ -9,7 +9,7 @@
         </div>
         <div class="uk-width-5-6">
             <div class="uk-panel uk-panel-box ui-yellow">
-               Voting
+               Team name
             </div>
         </div>
     </div>
