--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -45,7 +45,7 @@
     <div class="uk-text-center">
         <div class="uk-grid uk-grid-small uk-margin-small-top">
             <div class="uk-panel uk-width-6-10">
-            <a href="" class="uk-button uk-icon-archive uk-margin-small-bottom ui-text-white ui-button ui-darkviolet" style="width:100%; font-size: 500%; padding: 20px;">
+            <a href="" class="uk-button uk-icon-trophy uk-margin-small-bottom ui-text-white ui-button ui-darkviolet" style="width:100%; font-size: 500%; padding: 20px;">
                 <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Achievement</div>
             </a>
             </div>
