--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -1,34 +1,41 @@
 @(teams: List[Team])
 
-@main("Group List")(css) {
+@main("Team List")(css) {
     <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin>
-        <div class="uk-width-1-6">
-            <div class="uk-panel uk-panel-box ui-red">
-                <a href="@routes.Application.mainMenu()" class="uk-icon-hover uk-icon-small uk-icon-arrow-left"></a>
-            </div>
+        <div class="uk-panel uk-width-1-6">
+            <a href="@routes.Application.mainMenu()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height: 100%"></a>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box ui-yellow">
+            <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0">
                 Team List
             </div>
         </div>
     </div>
 
 
-    @teams.map { team =>
+    <div class="uk-text-center">
+        <div class="uk-grid uk-grid-margin uk-grid-small">
+            @teams.map { team =>
 
-        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
-            <div class="uk-width-9-10 uk-container-center">
-                <a href="@routes.Application.team(team.id)">
-                <div class="uk-panel uk-panel-box ui-green">
-                    @team.name
-                </div>
+                <div class="uk-panel uk-width-1-2">
+                <a href="@routes.Application.team(team.id)" class="uk-button uk-width-1-1 uk-icon-steam uk-margin-small-bottom ui-text-white ui-button ui-black" style="font-size: 500%; padding: 20px;">
+                    <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">@team.name</div>
                 </a>
-            </div>
+                </div>
+
+        @*<div class="uk-grid uk-grid-small" data-uk-grid-margin>*@
+            @*<div class="uk-width-9-10 uk-container-center">*@
+                @*<a href="@routes.Application.team(team.id)">*@
+                @*<div class="uk-panel uk-panel-box ui-green" style="color: #ffffff; border-width: 0;">*@
+                    @*@team.name*@
+                @*</div>*@
+                @*</a>*@
+            @*</div>*@
+        @*</div>*@
+
+            }
         </div>
-
-    }
-
+    </div>
 }
 @css = {
 
