--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@(message: String)(team: String)
 
 @main("Main menu")(css) {
     <div class="uk-grid uk-grid-collapse">
@@ -42,17 +42,57 @@
         </div>
     </div>
 
+    @if(!team.equals("No Team")){
+        <div class="uk-text-center">
+            <div class="uk-grid uk-margin-small-top uk-grid-small">
+                <div class="uk-panel uk-width-1-2">
+                    <a href="@routes.Application.editDescription()" class="uk-button uk-icon-edit uk-margin-small-bottom ui-text-white ui-button" style="background:#1BBC9B; width:100%; font-size: 500%; padding: 20px;">
+                        <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Description</div>
+                    </a>
+                </div>
+                <div class="uk-panel uk-width-1-2">
+                    <a onclick="upload()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button" style="background:#67809F; width:100%; font-size: 500%; padding: 20px;">
+                        <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Team Logo</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <script>
+        filepicker.setKey("AQzjQ7dnOSUOcyy7tn4jVz");
+
+            function upload() {
+                filepicker.pick ({
+                    mimetype: 'image/*',
+                    maxSize: 70*70
+                },
+                function ( data ) {
+                    $.post( "@routes.Application.uploadLogo()",
+                        function(data) {
+                        {
+                            url : data.url
+                        }
+                        }
+                    );
+                    },
+                function(FPError){
+                    console.log(FPError.toString());
+                }
+                ) ;
+            }
+
+        </script>
+    }
     <div class="uk-text-center">
         <div class="uk-grid uk-grid-small uk-margin-small-top">
             <div class="uk-panel uk-width-6-10">
-            <a href="" class="uk-button uk-icon-trophy uk-margin-small-bottom ui-text-white ui-button ui-darkviolet" style="width:100%; font-size: 500%; padding: 20px;">
-                <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Achievement</div>
-            </a>
+                <a href="" class="uk-button uk-icon-trophy uk-margin-small-bottom ui-text-white ui-button ui-darkviolet" style="width : 100% ; font-size : 500% ; padding : 20px ;">
+                    <div class="uk-text-bottom" style="color : #ffffff ; font-size : 30% ; font-family : 'Signika', sans-serif ;">Achievement</div>
+                </a>
             </div>
             <div class="uk-panel uk-width-4-10">
-            <a href="@routes.Application.logout" class="uk-button uk-width-4-10 uk-icon-power-off uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width:100%; font-size: 500%; padding: 20px;">
-                <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Logout</div>
-            </a>
+                <a href="@routes.Application.logout" class="uk-button uk-width-4-10 uk-icon-power-off uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width : 100% ; font-size : 500% ; padding : 20px ;">
+                    <div class="uk-text-bottom" style="color : #ffffff ; font-size : 30% ; font-family : 'Signika', sans-serif ;">Logout</div>
+                </a>
             </div>
 
         </div>
@@ -61,4 +101,5 @@
 
 @css = {
     <script src="@routes.Assets.at("javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
+    <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
 }
