--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -18,7 +18,8 @@
             @teams.map { team =>
 
                 <div class="uk-panel uk-width-1-2">
-                <a href="@routes.Application.team(team.id)" class="uk-button uk-width-1-1 uk-icon-steam uk-margin-small-bottom ui-text-white ui-button ui-black" style="font-size: 500%; padding: 20px;">
+                <a href="@routes.Application.team(team.id)" class="uk-button uk-width-1-1 uk-margin-small-bottom ui-text-white ui-button ui-black" style="font-size: 500%; padding: 20px;">
+                    <img src="@team.logo" style="height: 100px; width: auto;">
                     <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">@team.name</div>
                 </a>
                 </div>
