improve UI: team, edit description page

--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -7,7 +7,7 @@
         </div>
         <div class="uk-width-5-6">
             <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0">
-                Team List
+                <b>Team List</b>
             </div>
         </div>
     </div>
