--- a/app/views/create_team.scala.html
+++ b/app/views/create_team.scala.html
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-grid uk-grid-small uk-margin-small-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
                 <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.login">Cancel</a>
             </div>
