--- a/app/views/edit_description.scala.html
+++ b/app/views/edit_description.scala.html
@@ -2,7 +2,7 @@
 @main("Edit team description")(css) {
     @helper.form(routes.Application.editDescription) {
 
-        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-grid uk-grid-small uk-margin-large-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
 
                 <div class="uk-panel uk-panel-box">
@@ -28,13 +28,13 @@
 
             </div>
         </div>
-        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-grid uk-grid-small uk-margin-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom" type="submit">Submit</button>
+                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom uk-button-large" type="submit">Submit</button>
             </div>
         </div>
 
-        <div class="uk-grid uk-grid-small" data-uk-grid-margin>
+        <div class="uk-grid uk-grid-small uk-margin-small-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
                 <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.mainMenu">Cancel</a>
             </div>
