--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -51,34 +51,34 @@
                     </a>
                 </div>
                 <div class="uk-panel uk-width-1-2">
-                    <a onclick="upload()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width:100%; font-size: 500%; padding: 20px;">
+                    <a href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width:100%; font-size: 500%; padding: 20px;">
                         <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Team Logo</div>
                     </a>
                 </div>
             </div>
         </div>
         <script>
-        filepicker.setKey("AQzjQ7dnOSUOcyy7tn4jVz");
+        @*filepicker.setKey("AQzjQ7dnOSUOcyy7tn4jVz");*@
 
-            function upload() {
-                filepicker.pick ({
-                    mimetype: 'image/*',
-                    maxSize: 100*100
-                },
-                function ( data ) {
-                        $.post( "@routes.Application.uploadLogo()",
-                        {
-                            url : data.url
-                        }
-                        ).done(function() {
-//                         alert( "done" );
-                        });
-                },
-                function(FPError){
-                    console.log(FPError.toString());
-                }
-                ) ;
-            }
+            @*function upload() {*@
+                @*filepicker.pick ({*@
+                    @*mimetype: 'image/*',*@
+                    @*maxSize: 100*100*@
+                @*},*@
+                @*function ( data ) {*@
+                        @*$.post( "@routes.Application.uploadLogo()",*@
+                        @*{*@
+                            @*url : data.url*@
+                        @*}*@
+                        @*).done(function() {*@
+@*//                         alert( "done" );*@
+                        @*});*@
+                @*},*@
+                @*function(FPError){*@
+                    @*console.log(FPError.toString());*@
+                @*}*@
+                @*) ;*@
+            @*}*@
 
         </script>
     }
