change upload from filepicker to cloud.exceedvote2015.cf

--- a/app/views/main_menu.scala.html
+++ b/app/views/main_menu.scala.html
@@ -3,12 +3,12 @@
 @main("Main menu")(css) {
     <div class="uk-grid uk-grid-collapse">
         <div class="uk-width-1-1">
-            <div class="uk-panel uk-panel-box" style="background: #000000; ;color: #ffffff">@message</div>
+            <div class="uk-panel uk-panel-box" style="border-color: inherit ;background: #000000; ;color: #ffffff">@message</div>
         </div>
     </div>
     <div class="uk-grid uk-grid-collapse">
         <div class="uk-width-1-1">
-            <div class="uk-panel uk-panel-box uk-text-center" style="background: #ffffff; color: #000000; font-size: 400%">
+            <div class="uk-panel uk-panel-box uk-text-center" style="border-color: inherit ;background: #ffffff; color: #000000; font-size: 400%">
                 <div id="clock"></div>
                 <script>
                 $ ( '#clock' ).countdown ( "2015/03/10 00:00:00", function ( event ) {
@@ -76,5 +76,5 @@
 }
 
 @css = {
-    <script src="@routes.Assets.at("/public", "javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.countdown.min.js")" type="text/javascript"></script>
 }
