--- a/app/views/edit_description.scala.html
+++ b/app/views/edit_description.scala.html
@@ -16,6 +16,23 @@
                                 </div>
                             }
 
+                            <div class="uk-text-center">
+                                <div class="uk-grid uk-grid-small uk-margin-small-top">
+                                    <div class="uk-panel uk-width-5-10">
+                                        <a href="@routes.Application.uploadLogo()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-hoki" style="width : 100 % ; font-size : 500 % ; padding : 20 px ;">
+                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 30 % ; font-family : 'Signika', sans-serif ;">
+                                                Upload Team Logo</div>
+                                        </a>
+                                    </div>
+                                    <div class="uk-panel uk-width-5-10">
+                                        <a href="@routes.Application.uploadScreenshot()" class="uk-button uk-icon-image uk-margin-small-bottom ui-text-white ui-button ui-mountain-meadow" style="width : 100 % ; font-size : 500 % ; padding : 20 px ;">
+                                            <div class="uk-text-bottom" style="color : #ffffff ; font-size : 30 % ; font-family : 'Signika', sans-serif ;">
+                                                Upload Screenshot</div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
                             @*<input name="content" type="text" placeholder="write here" class="uk-width-1-1" value="@form.data.get("content")">*@
                             <div class="uk-form-row">
                                 <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here"></textarea>
