--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,7 +7,7 @@
         <title>@title</title>
         <meta name="viewport" content="width=device-width">
 
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/icon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap-3.3.2/css/bootstrap.min.css")">
         <script src="@routes.Assets.at("bootstrap-3.3.2/js/bootstrap.min.js")" type="text/javascript"></script>
