Debug register system

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,6 +1,6 @@
 @(form: Form[forms.Login])
 
-@main("Welcome to Exceed Vote")(css) {
+@main("Welcome to Exceed rating")(css) {
     <div class="uk-grid uk-margin-large-top" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center" style="text-align: center; color: #ffffff">
             <h1 class="uk-display-inline-block" style="color: #ffffff">Exceed Vote</h1>
