Fix rating system

--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -85,7 +85,7 @@
                                                 </span>
                                                 <span class="ir">2</span>
                                             </label>
-                                            <input id="@Criteria.toStringId(criteria.Id , 1 )" name="rating" type="radio" value="1"checked />
+                                            <input id="@Criteria.toStringId(criteria.Id , 1 )" name="rating" type="radio" value="1" />
                                             <label for="@Criteria.toStringId(criteria.Id , 1 )" data-value="1">
                                                 <span class="rating-star">
                                                     <i class="fa fa-star-o"></i>
