upload_screenshot page redirect to edit description page

--- a/app/views/upload_screenshot.scala.html
+++ b/app/views/upload_screenshot.scala.html
@@ -36,7 +36,7 @@
         </div>
         <div class="uk-grid uk-grid-small uk-margin-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.mainMenu">Back</a>
+                <a class="uk-button uk-button-large uk-width-1-1" href="@routes.Application.editDescription()">Back</a>
             </div>
         </div></form>
 
