--- a/app/views/team_list.scala.html
+++ b/app/views/team_list.scala.html
@@ -3,10 +3,10 @@
 @main("Team List")(css) {
     <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin >
         <div class="uk-panel uk-width-1-6">
-            <a href="@routes.Application.mainMenu()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width : 100% ; padding : 18px ; border-width : 0 ; height : 100% ; font-size: large;"></a>
+            <a href="@routes.Application.mainMenu()" class="uk-button uk-icon-arrow-left ui-text-white ui-button ui-redpink" style="width : 100% ; padding : 18px ; border-width : 0 ; height : 60px; font-size: large;"></a>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0; font-size: large;">
+            <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0; font-size: large;height : 60px;">
                 <b>Team List</b>
             </div>
         </div>
