--- a/app/views/rating.scala.html
+++ b/app/views/rating.scala.html
@@ -1,12 +1,12 @@
 @(criterias: List[Criteria])
 
 @main("Rating")(css) {
-    <div class="uk-grid uk-text-center uk-grid-collapse" style="font-size: large;">
+    <div class="uk-grid uk-text-center uk-grid-collapse">
         <div class="uk-panel uk-width-1-6">
-            <a href="@routes.Application.teamList()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height: 100%; font-size: large;"></a>
+            <a href="@routes.Application.teamList()" class="uk-button uk-icon-arrow-left ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height : 55px; font-size: large;"></a>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="border-width: 0;">
+            <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="border-width: 0; font-size: large; height : 55px;">
                 <b>Rating</b>
             </div>
         </div>
